--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </div>
             <nav>
                 <ul>
-                    <li></i><a href="index.html" title="Home Page">Home</a></li>
-                    <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a></li>
-                    <li><a href="contatti.html" title="Candidati inviando un tuo cv">Lavora con noi</a></li>
+                    <li></i><a href="index.html" title="Home Page"><i class="fa-solid fa-arrow-right"></i>Home<i class="fa-solid fa-arrow-left"></i></a></li>
+                    <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati"><i class="fa-solid fa-arrow-right"></i>Articoli<i class="fa-solid fa-arrow-left"></i></a></li>
+                    <li><a href="contatti.html" title="Candidati inviando un tuo cv"><i class="fa-solid fa-arrow-right"></i>Lavora con noi<i class="fa-solid fa-arrow-left"></i></a></li>
                 </ul>
             </nav>
 
